# RestAPI-Server

./: .env.sample  .gitignore  Dockerfile  LICENSE  docker-compose.dev.yml  docker-compose.yml  launch_main.py  memo.py  pyproject.toml  readme.md  redis.conf  requirements.txt  sql.txt
postgres/init/: 01_init.sql  02_init.sql
src/: basic_authentication.py  basic_authentication_crud.py  basic_certification.py  config.json  converter.py  create_postgres_engine.py  create_sqlite_engine.py  crud.py  db.py  load_secrets.py  main.py  manager.py  match_sync_manager.py  redis_subscriber.py  score_utils.py  shared_queue.py
src/authentication/: basic_authentication.py  basic_authentication_crud.py
src/domain/: __init__.py  match_rules.py
src/models/: basic_authentication_models.py  basic_authentication_shemas.py  basic_certification_models.py  basic_certification_shemas.py  dc_models.py  schema_models.py  schemas.py
src/routers/: http_exceptions.py  match.py  restapi.py
src/services/: match_db.py  simulation.py
