[project]
name = "api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi[all]==0.115.5",
    "numpy>=1.25.1,<2.0",
    "psycopg-pool==3.2.0",
    "psycopg~=3.1.15",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "sse-starlette==1.8.2",
    "uuid6==2024.7.10",
    "uvicorn[standard]==0.32.1",
]